Fixed stying to look better on mobile

--- a/styles/Components.module.css
+++ b/styles/Components.module.css
@@ -1,3 +1,8 @@
+.titleheading {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .searchformcontainer {
   padding-top: 16px;
   padding-bottom: 16px;
