--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,6 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
